PageDTO 사용자함수를 사용하여 새로운 객체를 만들어 page, size, totalPages, totalElements, content값 반환해주는 작업.

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,7 +16,7 @@
 	    </tr>
 	  </thead>
 	  <tbody>
-	    <tr th:each="item:${content}">
+	    <tr th:each="item:${pageDTO.content}">
 	      <th scope="row" th:text="${item.id}">1</th>
 	      <td th:text="${item.word}">Mark</td>
 	    </tr>
