--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -25,8 +25,8 @@
 </div>
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabled" th:classappend="${pageDTO.page == 1} ? 'disabled'">
-      <a class="page-link">Previous</a>
+    <li class="page-item" th:classappend="${pageDTO.page == 1} ? 'disabled'">
+      <a class="page-link" th:href="@{/words(page=${pageDTO.page - 1}, size=${pageDTO.size})}">Previous</a>
     </li>
     <li class="page-item" th:each="pageNum : ${#numbers.sequence(1, pageDTO.totalPages)}" th:classappend="${pageNum == pageDTO.page} ? 'active'">
     	<a class="page-link" th:href="@{/words(page=${pageNum}, size=${pageDTO.size})}" th:text="${pageNum}">1</a>
