--- a/src/main/resources/templates/card/cardDetail.html
+++ b/src/main/resources/templates/card/cardDetail.html
@@ -2,11 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Insert title here</title>
 <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"></link>
 </head>
 <body>
-<h1>cardDetail</h1>
+<h1 class="text-center">cardDetail</h1>
 <ul>
 <li th:text="'ID: ' + ${card.id}"></li>
 <li th:text="'TITLE: ' + ${card.title}"></li>
